[package]
name = "heterovec"
version = "0.1.1g"
authors = ["Phoenix Kahlo <kahlo.phoenix@gmail.com>"]
edition = "2018"

description = "In-place vector of dynamically sized type"
readme = "README.md"
categories = ["memory-management"]
license = "MIT"
repository = "https://github.com/gretchenfrage/heterovec"